--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+*{
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  padding: 60px;
+}
+
+input{
+  color: gray;
+  font-size: 1.2rem;
+  width: 100%;
+}
+
+.tarjeta{
+  align-content: center;
+  border: 1px solid gray;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.gridCartas{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.tarjeta p{
+  padding: 5px;
+  text-align: center;
+  font-size: 10px;
+}
+
+.tarjeta img{
+    max-height: 160px;
+    align-content: center;
+}
+
+
+.tarjeta {
+  animation-duration: 2s; /* don't forget to set a duration! */
+}
+
+.cargando{
+  animation-duration: 4s;
+
 }
